# DeepSteps

./: .gitignore  README.md
.github/workflows/: ci.yml  release.yml
Deep_Steps_project/: config.make  pyproject.toml
Deep_Steps_project/src/: ofApp.cpp
Deep_Steps_project/tools/: build_dataset.py  corpus_encode.py  make_synth_dataset.py  midi_verify.py  run_midi_test.sh  test_build_dataset.py  test_corpus_encode.py  test_train_export.py  train_export.py
deepsteps-plugin/: Cargo.toml  NOTES-sequencer.md  VALIDATION.md
deepsteps-plugin/clap-host-test/: Cargo.toml  README.md
deepsteps-plugin/clap-host-test/src/: main.rs
deepsteps-plugin/src/: audio.rs  autoencoder.rs  dataset.rs  decoder.rs  editor.rs  lib.rs  model_ops.rs  params.rs  sequencer.rs  shared.rs  training.rs
deepsteps-plugin/vst3-host-test/: Cargo.toml  README.md
deepsteps-plugin/vst3-host-test/src/: main.rs
deepsteps-plugin/weights/: decoder.json  reference_vectors.json
deepsteps-plugin/xtask/: Cargo.toml
docs/: BUILDING-linux.md
docs/plans/: 2026-06-13-linux-port.md  2026-06-14-pr3-review-followups.md  2026-06-14-stage2-nih-plug-design.md  2026-06-14-stage2-nih-plug-plan.md  2026-06-14-stage3-egui-editor-design.md  2026-06-16-runtime-training-design.md
