[workspace]
members = ["xtask"]

[package]
name = "deepsteps-plugin"
version = "0.1.1"
edition = "2021"
license = "see repo"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "f36931f7af4646065488a9845d8f8c2f95252c23" }
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "f36931f7af4646065488a9845d8f8c2f95252c23" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arc-swap = "1"
rustfft = "6"
rfd = "0.14"
symphonia = { version = "0.5", default-features = false, features = ["wav", "flac"] }

[profile.release]
lto = "thin"
strip = "symbols"
